syntax="proto3";

option go_package="service";

import "login.proto";
import "project.proto";
package task;

service LogService {
    rpc AddLog(Log) returns (Result) {}
    rpc PullLogs(ProjectQuery) returns (stream Log) {}
    rpc SetStatus(LogStatus) returns (Result) {}
}

message LogStatus {
    string token = 1;
    int64 projectID = 2;
    int64 index = 3;
    bool done = 4;
}

message Log{
    string token = 1; // Must Login
    int64 projectID = 2; // which project it belong to?
    string name = 3; // who commit it?
    int64 date = 4; // when it commits
    bool done = 5;  // is it done?
    string content = 6;  // its content
}
